samples/_failures_safe/1761161383_ca627d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f28d0fd0.c: In function ‘main’:
./samples/SAFE/__tmp_f28d0fd0.c:157:21: error: expected declaration or statement at end of input
  157 |                     printf("Matrix sum:\n");
      |                     ^~~~~~
./samples/SAFE/__tmp_f28d0fd0.c:157:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f28d0fd0.c:157:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f28d0fd0.c:157:21: error: expected declaration or statement at end of input
